<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="action_exit">Exit</string>
    <string name="action_add">Add Station</string>
    <string name="action_info">Info</string>
    <string name="title_activity_notification_area">NotificationAreaActivity</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="error_drm_unknown">An unknown DRM error occurred</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="TAG_URI">TAG_URI</string>
    <string name="TAG_TYPE">TAG_TYPE</string>
    <string name="network_not_available">Network State is not available</string>
    <string name="exo_player_name">ExoPlayerDemo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">Automation and Monitoring</string>
    <string name="pref_title_headphone_monitoring">Headphones monitoring</string>
    <string name="pref_description_headphone_monitoring">If enabled then playing will be paused when headphones disconnected
        and then resumed when headphones connected back
    </string>
    <string name="pref_title_bluetooth_monitoring">Bluetooth monitoring</string>
    <string name="pref_description_bluetooth_monitoring">If enabled then playing will be paused when headphones disconnected
        and thene resumed when bluetooth connected back
    </string>
    <string name="pref_title_autoplay">Auto play on loading</string>
    <string name="pref_description_autoplay">If enabled and previously used station available then playing will be automatically start</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_themes_list_title">Theme</string>
    <string-array name="pref_themes_list_titles">
        <item>Dark</item>
        <item>Medium Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="pref_themes_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_fab_position_title">Position of Play/Pause button</string>
    <string-array name="pref_fab_position_list_titles">
        <item>Top</item>
        <item>Bottom</item>
    </string-array>
    <string-array name="pref_fab_position_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_header_recording">Recording settings</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item name="default">-1</item>
    </string-array>
    <string-array name="banned_anchors_labels">
        <item>terms of use</item>
        <item>privacy</item>
        <item>help</item>
        <item>contact us</item>
        <item>contacts</item>
        <item>contact</item>
        <item>suggest a station</item>
        <item>index.html</item>
        <item>index.html#</item>
        <item>about/index.html</item>
        <item>about/our-services.html</item>
        <item>about/team.html</item>
        <item>products/networked-audio.html</item>
        <item>products/smart-tv-and-home-video.html</item>
        <item>products/mobile-and-tablet.html</item>
        <item>products/automotive.html</item>
        <item>products/pc-and-cloud-music.html</item>
        <item>products/game-consoles.html</item>
        <item>partners/index.html</item>
        <item>contact/index.html</item>
        
        <item>about/our-services.html</item>
        <item>products/networked-audio.html</item>
        <item>products/smart-tv-and-home-video.html</item>
        <item>products/mobile-and-tablet.html</item>
        <item>products/automotive.html</item>
        <item>products/pc-and-cloud-music.html</item>
        <item>products/game-consoles.html</item>
        <item>contact/index.html</item>
        <item>index.html</item>
        <item>about/our-services.html</item>
        <item>about/team.html</item>
        <item>products/networked-audio.html</item>
        <item>products/smart-tv-and-home-video.html</item>
        <item>products/mobile-and-tablet.html</item>
        <item>products/automotive.html</item>
        <item>products/pc-and-cloud-music.html</item>
        <item>products/game-consoles.html</item>
        <item>partners/index.html</item>
        <item>contact/index.html</item>
        <item>privacy-policy.html</item>
        <item>terms-of-use.html</item>
        <item>index.asp</item>
        <item>services.asp</item>
        <item>features.asp </item>
        <item>partners.asp</item>
        <item>team.asp</item>
        <item>contact.asp</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_themes">Look and Feel</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_description_callmonitoring">Pause on incomming or outcomming call and resume on call end</string>
    <string name="pref_title_monitoring">Pause on calls</string>
    <string name="title_font_size">Font Size</string>
    <string name="title_font_size_for_search">Font Size in Search page</string>
    <string name="headphone_switch">headphone_switch</string>
    <string name="bluetooth_switch">bluetooth_switch</string>
    <string name="autoplay_switch">autoplay_switch</string>
    <string name="phonecall_switch">call_switch</string>
    <string name="font_size_value">font_size</string>
    <string name="font_size_for_search_value">font_size_for_search</string>
    <string name="space_size_value">space_size</string>
    <string name="themes_list">themes_list</string>
    <string name="title_padding_space">Space Between Stations</string>
    <string name="application_name">Web Spidola</string>
    <string name="max_file_size">max_file_size</string>
    <string name="max_file_size_title">Maximum recording size (MB)</string>
    <string name="title_activity_activity_vtuner">Search and add Station</string>
    <string name="add_stations_button">Add Stations</string>
    <string name="adding_content">Search and Adding Stations</string>
    <string name="title_activity_help">Help</string>
    <string name="search_stations_url">http://www.vtuner.com/setupapp/guide/asp/BrowseStations/Searchform.asp?sSearchInput=</string>
    <string name="js_get_anchors"><![CDATA[
var a=document.getElementsByTagName(\'A\');var s=[];if(a!=null)for(var i=0;a.length>i;i++)
s.push(a[i].innerText+\'=\'+a[i].href);s.join(\'_|_|_\')
    ]]></string>
    <string name="js_get_outerhtml"><![CDATA[
var s=document.documentElement.outerHTML;if(s.indexOf(\'viewport\')>=0)window.history.back();else \'no \'+s
    ]]></string>
    <string name="test"><![CDATA[
res= \'[\'+s1.join(\',\') + \']_|_|_[\' + s2.join(\',\')+\']\';
    ]]></string>
    <string name="js_get_anchors_struct"><![CDATA[
var s1 = [], s2 = [], s, a, i, parent, res=\'parent\',delim0=\'__aaa__aaa__\';delim1=\'__bbb__bbb__"\';delim2=\'__ccc__ccc__\',anch = document.getElementsByTagName(\'A\');
for (i = 0; anch.length > i; i++){
parent = (a = anch[i]).parentElement.parentElement; s = a.href+ delim0 +  a.innerText;
if (a.href.indexOf(\'link=1&id=\') > 0){
    if (parent.children.length == 5)
        s1.push(s+ delim0 + parent.children[4].innerText + delim0 + parent.children[2].innerText + delim0 + parent.children[3].innerText);
}else s2.push(s);
}
res=(s1.join(delim1) + delim2 + s2.join(delim1))
]]></string>
    <string name="audiolevel_switch">audiolevel_on_headphones</string>
    <string name="audiolevel_summary">Restore audio level when reconnecting headphones while playing</string>
    <string name="audiolevel_title">Restore level on headphones</string>
    <string name="manage_stations_title">Manage Stations</string>
    <string name="delete_station_button">Delete it</string>
    <string name="keep_sation_button">Let it be</string>
    <string name="add_station_button">Let it be Added</string>
    <string name="not_add_station_button">Do not add it</string>
    <string name="add_station_button_1">Add anyway</string>
    <string name="not_add_station_button_1">Do not add</string>
    <string name="duplicate_station_button">Duplicate Station</string>
    <string name="inaccessible_station_text">Would you like to delete inaccessible station with the label\n\'%s\'</string>
    <string name="manage_station_text">Would you like to not add station with the label\n\'%s\'</string>
    <string name="duplicate_station_text">Chosen station already is in the list with the label\n\'%s\'</string>
    <string name="selected_station_def">SelectedStation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="root_directory_for_recordings">ROOT_DIRECTORY_FOR_RECORDINGS</string>
    <string name="records_sort_ascending">RECORDS_SORT_ASCENDING</string>
    <string name="sort_ascending">Sort Ascending</string>
    <string name="shortening_names">Shortening Names</string>
    <string name="records_shorting_names">RECORDS_SHORTING_NAMES</string>
    <string name="help_section_title">Help Page for %1$s</string>
    <string name="title_activity_help_tabbed">HelpTabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="help_action_exit">Close Help</string>
    <string name="action_settings">Settings</string>
    <string name="help_favorites">Favorite Stations</string>
    <string name="help_recordings">Recordings</string>
    <string name="help_search">Search Stations</string>
    <string name="help_manage">Manage Favorite Stations</string>
    <string name="help_settings">Settings</string>
    <string name="help_settings_1">Settings for Automation/Monitoring</string>
    <string name="help_settings_2">Settings for Look and Feel</string>
    <string name="help_settings_3">Settings for Recordings</string>
    <string name="banner_ad_unit_id">ca-app-pub-5265061023469633/9916779909</string>
</resources>