<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/headphone_switch"
        android:summary="@string/pref_description_headphone_monitoring"
        android:title="@string/pref_title_headphone_monitoring"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/audiolevel_switch"
        android:summary="@string/audiolevel_summary"
        android:title="@string/audiolevel_title"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/bluetooth_switch"
        android:summary="@string/pref_description_bluetooth_monitoring"
        android:title="@string/pref_title_bluetooth_monitoring"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/autoplay_switch"
        android:summary="@string/pref_description_autoplay"
        android:title="@string/pref_title_autoplay"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/phonecall_switch"
        android:summary="@string/pref_description_callmonitoring"
        android:title="@string/pref_title_monitoring"/>
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
