<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="headphone_switch"
        android:summary="@string/pref_description_headphone_monitoring"
        android:title="@string/pref_title_headphone_monitoring"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="bluetooth_switch"
        android:summary="@string/pref_description_bluetooth_monitoring"
        android:title="@string/pref_title_bluetooth_monitoring"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="autoplay_switch"
        android:summary="@string/pref_description_autoplay"
        android:title="@string/pref_title_autoplay"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="call_switch"
        android:summary="@string/pref_description_callmonitoring"
        android:title="@string/pref_title_monitoring"/>
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_themes_list_titles"
        android:entryValues="@array/pref_themes_list_values"
        android:key="themes_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages"/>
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name"/-->

</PreferenceScreen>
