<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".FavoriteStationsFrame">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sort_ascending"
        android:orderInCategory="150"
        android:title="@string/sort_ascending"
        android:checkable="true"
        android:checked="true"/>
    <item
        android:id="@+id/shortening_names"
        android:orderInCategory="160"
        android:title="@string/shortening_names"
        android:checkable="true"
        android:checked="true"/>
    <item
         android:id="@+id/action_help"
         android:orderInCategory="250"
         android:title="@string/title_activity_help"
         app:showAsAction="never"/>
    <!--item
        android:id="@+id/action_help1"
        android:orderInCategory="251"
        android:title="@string/title_activity_help"
        app:showAsAction="never"/-->
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="300"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_volume_down"
        android:orderInCategory="400"
        android:title="-"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_volume_up"
        android:orderInCategory="500"
        android:title="+"
        app:showAsAction="always"/>
</menu>
